# monos

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  benchmark.csv  benchmark.py  cmake_config.h.in  test.py
cc/: CMakeLists.txt  main.cpp
gl/: CMakeLists.txt
gl/src/: dummy.cpp  main.cpp
gui/: ArcGraphicsItem.cpp  ArcGraphicsItem.h  CMakeLists.txt  InputGraphicsItem.cpp  InputGraphicsItem.h  MyQtThings.h  cgsurf.ui  gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  surfgui.pro  weightDialog.h  weightDialog.ui  weightdialog.cpp  weightdialog.h
monos/: CMakeLists.txt
monos/inc/: BGLGraph.h  BasicInput.h  CollapseSpec.h  Config.h  Data.h  Definitions.h  EventQueue.h  Heap.h  Monos.h  Skeleton.h  Wavefront.h  cgTypes.h  tools.h
monos/src/: BGLGraph.cpp  BasicInput.cpp  BasicInput.h  CMakeLists.txt  CollapseSpec.cpp  Config.cpp  Data.cpp  EventQueue.cpp  GMLGraph.cpp  GMLGraph.h  Monos.cpp  Skeleton.cpp  Wavefront.cpp  cgTypes.cpp  tools.cpp
plot/: bench-4003-old-intersection-func.csv  bench-4003.csv  bench-big.csv  bench.csv  benchmark-bak-02-10.csv  benchmark-bak-26-09.csv  cgss-bench.csv  csv_to_sql.sh  gen-db  monos-bench-partbig.csv  monos-bench.csv  monos-oldcgal.db  monos-oldintersection.db  monos.db  pao-mono-2.csv  pao-mono-pnts-sort.csv  pao-mono-pnts.csv  pao-mono.csv  plot-surfer.R  plot.R  plt-compare  rpg-mono-2.csv
test/: ellipse100.line.gml  ellipse1000.line.gml  ellipse10000.line.gml  monotone-test-02-000.graphml  monotone-test-02-2.graphml  monotone-test-02.graphml  monotone-test-08-weights.graphml  monotone-test-08.ipe  monotone-test-09-recti.ipe  monotone-test-10.ipe
test-data/: ipe-non-x-mon.graphml  ipe-non-x-mon.ipe  monotone-test-01.graphml  monotone-test-03.graphml  monotone-test-04-recti.graphml  monotone-test-05-recti.graphml  monotone-test-06-recti.graphml  monotone-test-09-recti-003.graphml  monotone-test-10-000.graphml  poly-s1-p1000.graphml  poly-s3-p20000.graphml
